[gd_scene load_steps=3 format=3 uid="uid://ch0tvp1cfm07b"]

[ext_resource type="Script" path="res://scripts/load_game.gd" id="1_xjge2"]
[ext_resource type="FontFile" uid="uid://drd81v20b2ify" path="res://fonts/kirifont/KiriFont.ttf" id="2_7gygs"]

[node name="control" type="Node2D"]
script = ExtResource("1_xjge2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -4.0
offset_top = 2.0
offset_right = 1658.0
offset_bottom = 894.0
color = Color(0.372549, 0.176471, 0.490196, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 765.0
offset_top = 123.0
offset_right = 1161.0
offset_bottom = 163.0

[node name="Player_load" type="Label" parent="ColorRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7gygs")
theme_override_font_sizes/font_size = 30
text = "Player:"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 420.0
offset_top = 419.0
offset_right = 1274.0
offset_bottom = 489.0
theme_override_constants/separation = 400

[node name="lvl_1" type="Button" parent="ColorRect/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "      1     "

[node name="lvl_2" type="Button" parent="ColorRect/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "     2     "

[node name="lvl_3" type="Button" parent="ColorRect/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "     3     "

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 719.0
offset_top = 219.0
offset_right = 1172.0
offset_bottom = 249.0
theme_override_fonts/font = ExtResource("2_7gygs")
theme_override_font_sizes/font_size = 30
text = "selecciona nivel:
"

[node name="logout" type="Button" parent="."]
offset_left = 1476.0
offset_top = 29.0
offset_right = 1622.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("2_7gygs")
theme_override_font_sizes/font_size = 25
text = "Exit"

[connection signal="pressed" from="ColorRect/HBoxContainer2/lvl_1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer2/lvl_2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer2/lvl_3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="logout" to="." method="_on_logout_pressed"]
